0.0.2 (?)
=========
* Add the ability to manually link nicknames.
* Support giving users a non-nickname alias.
* Add a report to help identify important unassigned nicknames.
* Add the ability to selectively link nicknames based on timestamp.

0.0.1 (2012-12-21)
==================
* Initial release. Supports converting logs to chatstats format and generating
  very basic HTML statistics about a set of logs.